# saccr-workflow

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md  SA-CCR Sample IR Calculations.xlsx
notebook/: CCR Project.ipynb
outputs/: README.md  netting_set_ead.csv  report.html  summary.xlsx  summary_by_asset_class.csv  summary_by_counterparty.csv
scripts/: run_saccr.py
src/saccr/: __init__.py  aggregate.py  config.py  io.py  pipeline.py  plots.py  reporting.py  transform.py
tests/: test_pipeline.py
